<resources>
    <string name="app_name">Trivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twitter">Pertenece a Twitter</string>
    <string name="send">Enviar</string>
    <string name="all">TODO</string>
    <string name="instagram">Pertenece a Instagram</string>
    <string name="facebook">Pertenece a Facebook</string>
    <string name="wsp">Pertenece a WSP</string>
    <string name="hi">Hola, Usuario!</string>
    <string name="question">¿A qué logo pertenece la imagen?</string>
</resources>