<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmento2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_margin="20dp"
        android:text="@string/hi"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/wsp"
        android:contentDescription="@string/all" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:text="@string/question"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wsp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="600dp"
        android:backgroundTint="#9F99AA"
        android:text="@string/send"
        android:textColor="#263238" />

</FrameLayout>